update some styling

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
 }
+body{
+    background-color: teal;
+}
 h1{
     text-align: center;
     margin-top: 15px;
@@ -14,7 +17,7 @@ h1{
     text-align: center;
     justify-content: center;
     margin-top: 5%;
-    background-color: silver; 
+    background-color: rgb(200, 228, 228); 
     border-radius: 25px ;
     border: 2px solid #000;
     position: relative;
@@ -29,6 +32,8 @@ h1{
       border-radius: 10px; 
      border: 2px solid #000; 
      cursor: pointer; 
+     background-color: #ffff;
+     color: #000;
 
 }
 button:hover{
